Fixed footer cutoff

--- a/src/containers/Footer/Footer.scss
+++ b/src/containers/Footer/Footer.scss
@@ -2,6 +2,7 @@
 
 footer {
   position: relative;
+  top: $navbar_height;
   color: $white;
 
   h2 {
@@ -42,7 +43,7 @@ footer {
       flex-direction: row;
       justify-content: center;
       align-items: flex-end;
-      
+
       img {
         max-height: 600px;
         max-width: 80vw;
